Add styles for large screen sizes

--- a/scss/components/_social-icons.scss
+++ b/scss/components/_social-icons.scss
@@ -11,4 +11,10 @@
     height: 40px;
     border-radius: 50%;
     border: 1px solid white;
+    transition: color 0.2s linear, border-color 0.2s linear;
+
+    &:hover {
+        color: var(--button-hover);
+        border-color: var(--button-hover);
+    }
 }
