--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -5,6 +5,7 @@
     border: none;
     padding: 1em 0;
     width: 70%;
+    max-width: 220px;
     border-radius: 2em;
     margin: 0 auto;
     color: var(--button-text);
